--- a/index-START.html
+++ b/index-START.html
@@ -182,6 +182,15 @@
     </li>
   </ul>
 <script>
+
+  const timeNodes = Array.from(document.querySelectorAll('[data-time]'));
+
+  // console.log(timeNodes );
+  const seconds = timeNodes.map(node => node.dataset.time);
+  console.log(seconds);
+  
+  
+
 </script>
 </body>
 </html>
