--- a/index-START.html
+++ b/index-START.html
@@ -186,8 +186,14 @@
   const timeNodes = Array.from(document.querySelectorAll('[data-time]'));
 
   // console.log(timeNodes );
-  const seconds = timeNodes.map(node => node.dataset.time);
-  console.log(seconds);
+  const seconds = timeNodes
+  .map(node => node.dataset.time)
+  .map(timeCode => {
+    const [mins, secs] = timeCode.split(':') //separates minutes from seconds
+    .map(parseFloat); //converts from strings to numbers
+      console.log(mins, secs);
+  });
+
   
   
 
