--- a/index-START.html
+++ b/index-START.html
@@ -197,6 +197,10 @@
   let secondsLeft = seconds;
   const hours = Math.floor(seconds / 3600); //Math.floor cuts off anything after a decimal
   secondsLeft = secondsLeft % 3600; //% is 'mod' or 'modulus', gives you the remainder
+
+  const minutes = Math.floor(secondsLeft / 60);
+  secondsLeft = secondsLeft % 60;
+  
   console.log(secondsLeft);
   
 
