--- a/index-START.html
+++ b/index-START.html
@@ -200,8 +200,11 @@
 
   const minutes = Math.floor(secondsLeft / 60);
   secondsLeft = secondsLeft % 60;
+
+  // console.log(secondsLeft);
+
+  console.log(hours, minutes, secondsLeft);
   
-  console.log(secondsLeft);
   
 
 
